--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
     <!-- Graphs -->
     <!-- REMOVE AFTER CORRECT GRAPHS ARE IN JS FILE-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-    <script src="/static/js/app.js"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
     <script>
       var ctx = document.getElementById("myChart");
